# contract-analyzer

./: AGENTS.md  README.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
backend/app/: state.py
backend/app/api/routes/: analyze.py
backend/app/core/: config.py  llm.py  logging_utils.py  settings.py
backend/app/middleware/: request_logging.py
backend/app/nodes/: agent_controller.py  contradict.py  evaluate.py  ingestion.py  report.py  segment.py
backend/app/prompts/: contradict.py  evaluate.py  report.py  segment.py
backend/app/schemas/: contradict.py  evaluate.py  report.py  segment.py
backend/app/utils/: knowledge_base.py
backend/docs/: agent_controller.md  core.md  docs_update_policy.md  nodes.md  prompts.md  schemas.md
backend/notebooks/: llm_smoke_test.ipynb
backend/scripts/: check_docs_updated.py
backend/tests/: test_agent_controller.py  test_contradict_node.py  test_evaluate_node.py  test_report_node.py  test_segment.py
frontend/: Makefile
